drop down now checks token to render correctly immediately upon user login - truncate group card titles to 23 + ... - style nav drop down

--- a/styles/sass/nav.scss
+++ b/styles/sass/nav.scss
@@ -18,6 +18,10 @@
     border: 4px solid $midnight-purple;
     background-color: $steel-pink;
 
+    &:hover {
+      background-color: #dc84dc;
+    }
+
     &:hover ul li {
       display: grid;
     }
@@ -26,6 +30,10 @@
       justify-self: center;
       align-self: center;
       margin: 0;
+
+      &:hover {
+        color: white;
+      }
     }
 
     ul {
