--- a/styles/sass/variables.scss
+++ b/styles/sass/variables.scss
@@ -3,6 +3,7 @@ $midnight-purple: #6C186C !default;
 $pale-purple: #f6eff6 !default;
 $dark-blue-green: #186D6D !default;
 $steel-pink: #C52BC5 !default;
+$french-mauve: #dc84dc !default;
 $chill-aqua: #36B5BA !default;
 
 
